# allegro_orders_backup

./: .cursorrules  .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  qdrant-compose.yml
.cursor/rules/: projectrule.mdc
alembic/: env.py  script.py.mako
alembic/versions/: 2ef0eff6b085_change_user_id_to_string.py  510553f52617_init.py  598a1eb13aa8_change_ondelete_cascade_for_tokens.py  74c7a32dc927_init.py  856a6434a35b_add_failed_order_processing_table.py  d34021e94765_add_account_name_to_user_tokens.py  da65ca0007e5_fix_constraint_for_user_token.py  dc671ff6cbd7_add_activ_task_schedules.py  f572f5c6df31_order_technical_flags.py
app/: __init__.py  celery_app.py  exceptions.py  main.py
app/api/: __init__.py  dependencies.py
app/core/: __init__.py  auth.py  database.py  logging.py  settings.py
app/models/: __init__.py  active_sync_schedule.py  base.py  failed_order_processing.py  offer.py  order.py  order_event.py  order_technical_flags.py  sync_history.py  task_history.py  user_token.py
app/services/: __init__.py  active_sync_schedule_service.py  allegro_auth_service.py  data_monitoring_service.py  deduplication_service.py  offer_service.py  order_protection_service.py  order_service.py  order_sync_service.py  order_technical_flags_service.py  periodic_task_service.py  task_history_service.py  (+1 more)
docs/: changelog.md  diary.md  migrations.md  project.md  qa.md  swagger_guide.md  tasktracker.md
logs/: app.log.1
scripts/: create_migration.py  entrypoint.sh  init_celery_beat_tables.py
(+27 files in other folders)
